--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "easyswoole/wechat",
+    "name": "Marber-seven/wechat",
     "description": "Coroutine safety WeChat library",
     "keywords": [
         "swoole",
